# rs-lua-parser

./: LICENSE  README.md
.cargo/: config
crates/lua_parser/: Cargo.toml
crates/lua_parser/src/: ast.rs  grammar.ron  lexer.rs  lib.rs  syntax_error.rs  syntax_kind.rs  syntax_node.rs  syntax_text.rs
crates/lua_parser/src/ast/: generated.rs  generated.rs.tera
crates/lua_parser/src/lexer/: brackets.rs  comments.rs  cursor.rs  numbers.rs  strings.rs
crates/lua_parser/src/syntax_kind/: generated.rs  generated.rs.tera
crates/lua_parser/tests/: test.rs
crates/lua_parser/tests/data/lexer/: 001_keywords.lua  001_keywords.txt  002_numbers.lua  002_numbers.txt  003_strings.lua  003_strings.txt  004_comments.lua  004_comments.txt  005_symbols.lua  005_symbols.txt  006_identifiers.lua  006_identifiers.txt
crates/test_utils/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: main.rs
